syntax = "proto3";

message IPNSPublishMetadata {
  // The name of the key that was used to publish the record
  string keyName = 1;

  // Lifetime is the duration of the signature validity in milliseconds
  uint32 lifetime = 2;

  bool refresh = 3;
}
